fix: change GC to parallel for better troughput